Initial merge of basic estimator model.py with transfer learning estimator. Working locally.

--- a/tensorflow/satellite_transfer_model/TfHubDogsVsCats.ipynb
+++ b/tensorflow/satellite_transfer_model/TfHubDogsVsCats.ipynb
@@ -762,6 +762,27 @@
    "source": [
     "TensorFlow Hub will significantely increase the approachability for people to use complex models from others for their own specific task. The ability to fine tune while also using as is continues to democritize everyone's use of ML tools."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['dogs', 'cats']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# tf.gfile.ListDirectory(os.path.join('/tmp/datasets/dogscats/', 'valid'))\n",
+    "tf.gfile.ListDirectory(os.path.join('/tmp/datasets/dogscats/', 'valid'))"
+   ]
   }
  ],
  "metadata": {
