Comment out Planet library usage

--- a/pipeline/notebooks/dev-google-sdk.ipynb
+++ b/pipeline/notebooks/dev-google-sdk.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,16 +70,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<Bucket: reliable-realm-222318-mlengine>, <Bucket: reliable-realm-222318-vcm>]"
+       "[<Bucket: reliable-realm-222318-mlengine>,\n",
+       " <Bucket: reliable-realm-222318-vcm>,\n",
+       " <Bucket: reliable-realm-222318.appspot.com>,\n",
+       " <Bucket: staging.reliable-realm-222318.appspot.com>,\n",
+       " <Bucket: us.artifacts.reliable-realm-222318.appspot.com>]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,12 +141,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_bucket = storage_client.get_bucket(bucket_name='reliable-realm-222318-vcm')\n",
-    "help(data_bucket)"
+    "# help(data_bucket)"
    ]
   },
   {
@@ -161,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +342,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Planet API"
+    "## Find Blob Public URL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://storage.googleapis.com/reliable-realm-222318-vcm/pipeline/scenes/annotated/lb_1_annotated_20181123_200431.png'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bucket = storage_client.bucket(bucket_name='reliable-realm-222318-vcm')\n",
+    "blob = bucket.blob('pipeline/scenes/annotated/lb_1_annotated_20181123_200431.png')\n",
+    "blob.public_url"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Planet API"
    ]
   },
   {
